2008-01-28  Michael Hutchinson <mhutchinson@novell.com> 

	* Makefile.include: Workaround so that "make run" and uses of mdtool 
	  work with automake < 1.10.

2008-01-25  Wade Berrier  <wberrier@novell.com> 

	* Makefile.am: remove EXTRA_DIST files that were created
	by intltool.

2008-01-25  Lluis Sanchez Gual <lluis@novell.com> 

	* configure.in: Update MD version.

2008-01-24  Ankit Jain  <jankit@novell.com>
	Raja R Harinath  <rharinath@novell.com>

	* mdtool.in:
	* monodevelop.in: Handle spaces in arguments.

2008-01-23  Michael Hutchinson <mhutchinson@novell.com> 

	* autogen.sh: Update ftp addresses for packages.

2008-01-22  Michael Hutchinson <mhutchinson@novell.com> 

	* configure.in: Add a check for msgmerge. Add "hu" to ALL_LINGUAS.

2008-01-22  Lluis Sanchez Gual <lluis@novell.com> 

	* configure.in: Add indonesian language.

2008-01-16  Michael Hutchinson <mhutchinson@novell.com> 

	* configure.in: Updated. Remove intltool calls, check for msgfmt.
	* monodevelop.in: Tidied.
	* Makefile.include: Refactor code that sets vars when lanching MD, and apply
	  to mdtool too.
	* mdtool.in: Set process name on mdtool.
	* Makefile.am: Refactor code that sets vars when lanching MD.
	* autogen.sh: Remove intltoolizing.

2008-01-15  Wade Berrier  <wberrier@novell.com>

	* configure.in: rename sl_SI to sl in LINGUAS
	* monodevelop.desktop: removed "Application" category

2008-01-12  Ankit Jain  <jankit@novell.com>

	Fix bug #350786.
	* monodevelop.xml: Add entries for csproj, vbproj and sln.
	* monodevelop.desktop: Add mime types for vs projects.

2008-01-07  Lluis Sanchez Gual <lluis@novell.com> 

	* configure.in: Added Dutch translation. Patch by André Offringa.

2007-12-17  Aaron Bockover <abockover@novell.com>

	* monodevelop.desktop: Use the icon theme icon name instead of the actual
	filename since the icon is no longer installed to the deprecated pixbufs dir

2007-12-17  Aaron Bockover <abockover@novell.com>
