@@ -99,3 +99,16 @@ DISTCLEANFILES = monodevelop intltool-extract intltool-merge intltool-update \
 	$(pkgconfig_DATA) 
 
 include $(top_srcdir)/Makefile.include
+
+#
+# Force distuninstallcheck to ignore files created by cache-rebuilding commands (update-mime-database etc)
+#
+# From BEAST (LGPL license): http://svn.gnome.org/viewvc/beast/trunk/Makefile.am
+filter_stale_uninstalled = \
+    | egrep -v '^.*/share/mime/(subclasses|globs|magic|XMLnamespaces|aliases|mime\.cache)$$' \
+    | egrep -v '^.*./share/icons/hicolor/icon-theme\.cache$$'
+filter_stale_buildfiles       = | egrep -v '^./report.out$$'
+distuninstallcheck_listfiles  = find . -type f -print 		# automake-1.9 setting
+distuninstallcheck_listfiles += $(filter_stale_uninstalled)	# amend by required filtering
+distcleancheck_listfiles      = find . -type f -print		# automake-1.9 setting
+distcleancheck_listfiles     += $(filter_stale_buildfiles)	# amend by required filtering
