@@ -24,6 +24,7 @@ uninstall-hook:
 
 EXTRA_DIST = \
 	$(wildcard GNOME/*.png) \
+	GNOME/monodevelop.svg \
 	$(wildcard Mac/png/*.png) \
 	Mac/monodevelop.icns \
 	monodevelop-source.svg \
